// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not vote if logged off 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": null,
      "error": "You must be authenticated",
    },
  },
}
`;

exports[`should remove his vote 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 0,
        "upvotes": 0,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting down should remove up vote if so 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 0,
        "upvotes": 1,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting down should remove up vote if so 2`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 1,
        "upvotes": 0,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting down should vote only once 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 1,
        "upvotes": 0,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting down should vote only once 2`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": null,
      "error": "You already have voted down on this answer",
    },
  },
}
`;

exports[`when votting up should remove down vote if so 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 1,
        "upvotes": 0,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting up should remove down vote if so 2`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 0,
        "upvotes": 1,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting up should vote only once 1`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": Object {
        "downvotes": 0,
        "upvotes": 1,
      },
      "error": null,
    },
  },
}
`;

exports[`when votting up should vote only once 2`] = `
Object {
  "data": Object {
    "VoteAnswer": Object {
      "answer": null,
      "error": "You already have voted up on this answer",
    },
  },
}
`;
